# ai-desk-companion

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  launch.py  package-lock.json  package.json  pnpm-workspace.yaml  start.bat  start.py  start.sh
.claude/: settings.json
.claude/agents/: architect.md  developer.md  tester.md
.claude/skills/backtest-expert/: SKILL.md
.cloudflared/: whatsapp-config.example.yml  whatsapp-config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
apps/desktop/: .env.example  index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mcp-gateway/: .env.example  .env.sample  .whatsapp-messages.json  requirements.txt
apps/orchestrator/: .env.example  .env.sample  README.md  requirements-dev.txt  requirements.txt
apps/smarthome/: docker-compose.yml
docs/: adding-new-agent.md  agents.md  api-contracts.md  api.md  architecture.md  configuration.md  development.md  llm-setup.md  mcp-gateway.md  setup.md  tauri-desktop.md  voice-providers.md  wake-word.md
docs/agents/: briefing.md  calculator.md  calendar.md  github.md  gmail.md  memory.md  news.md  portfolio.md  smarthome.md  stock.md  system.md  weather.md  websearch.md  whatsapp.md
docs/architecture/: mcp-gateway-migration.md  mcp-server-template.md
docs/configuration/: ai.md  profile.md  providers.md  voice.md
scripts/: gen_tests.py  test.sh
(+199 files in other folders)
