[package]
name = "personal-ai-agent"
version = "0.1.0"
description = "Personal AI Agent — AI desk companion"
authors = []
license = ""
repository = ""
default-run = "personal-ai-agent"
edition = "2021"

[lib]
name = "personal_ai_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store  = "2"
tauri-plugin-shell  = "2"
tauri-plugin-notification = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
panic        = "abort"
codegen-units = 1
